added SBT_OPTS information to README